Replace deprecated third-party and JDK API calls with modern equivalents
First round of deprecation cleanup, targeting mechanical, low-risk
replacements of deprecated third-party and JDK APIs. Each replacement
was identified by compiling with -Xlint:deprecation, reading the
@deprecated Javadoc in the library source, and verifying the
replacement compiles and preserves existing behavior.

Replacements:
- ObjectNode.put(String, JsonNode) → .set(String, JsonNode)
- JsonNode.fields() → .properties()
- Class.newInstance() → getDeclaredConstructor().newInstance()
- FileUtils.readFileToString/write — add Charset parameter
- IOUtils.toString/write — add Charset parameter
- Guava Files.createTempDir() → JDK Files.createTempDirectory()
- StringUtils.remove/replace/compare → Strings.CS equivalents
- RandomStringUtils.random*() → secure().next*()

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>